[package]
name = "rhojvm-base"
version = "0.1.0"
edition = "2021"

[dependencies]
classfile-parser = { git = "https://github.com/MinusGix/classfile-parser" }
siphasher = "0.3.7"
# TODO: Optional logging?
tracing = "0.1"
smallvec = { version = "1.7", features = ["const_generics"] }
# TODO: Don't include this. Once intersperse is stabilized we can probably get rid of it.
itertools = "0.10.3"