[package]
name = "rhojvm-base"
version = "0.1.0"
edition = "2021"

[features]
default = ["implementation-cheaper-map-hashing"]
# Decides whether to enable the cheaper hashing for certain maps which already hash their key
# (or have a unique id)
# Note that the default HashMap hasher is randomly generated (see HashMap docs for more details)
# and that replacing it with this will be deterministic. Determinism is nice, but this does open
# up the possibility for it to be easier to produce malicious keys (that are excessively slow)
# Note that this does not replace _all_ hashmaps, so by itself does not lead to proper determinism
# TODO: Provide a way to seed the normal id hashing at runtime
implementation-cheaper-map-hashing = ["nohash-hasher"]

[dependencies]
classfile-parser = { git = "https://github.com/MinusGix/classfile-parser" }
#classfile-parser = { path = "../../classfile-parser/" }
tracing = { version = "0.1", default-features = false }
smallvec = { version = "1.7", features = ["const_generics"] }
# TODO: Don't include this. Once intersperse is stabilized we can probably get rid of it.
itertools = "0.10.3"
nohash-hasher = { version = "0.2.0", optional = true }
# TODO: Don't depend on this.
either = "1.6"
# For converting Java classfile strings into utf8
cesu8 = "^1.1"
# Primarily for being a HashMap that has a better method of handling borrowed instances
# Which makes the code far nicer.
indexmap = "1.8.0"
