[package]
name = "rhojvm"
version = "0.1.0"
edition = "2021"

[dependencies]
rhojvm-base = { path = "../rhojvm-base/" }
stack_map-verifier = { path = "../stack_map-verifier/" }
# TODO: It would be nice to not have to depend on this directly at all.
classfile-parser = { git = "https://github.com/MinusGix/classfile-parser" }
tracing = "0.1"
# Disables:
# env-filter (potentially useful but brings in a good bit, and can be enabled for debug)
# json (we don't really need this)
# tracing-log (this logging is mainly for rhojvm/rhojvm-base, not for deps)
# chrono (really don't need to bring in all this just to print some nice dates)
tracing-subscriber = { version = "0.2.0", default-features = false, features = [
    "fmt",
    "registry",
    "smallvec",
] }