[package]
name = "rhojvm"
version = "0.1.0"
edition = "2021"

[dependencies]
rhojvm-base = { path = "../rhojvm-base/" }
stack_map-verifier = { path = "../stack_map-verifier/" }
# TODO: It would be nice to not have to depend on this directly at all.
classfile-parser = { git = "https://github.com/MinusGix/classfile-parser" }
tracing = { version = "0.1", default-features = false }
smallvec = { version = "1.7", features = ["const_generics"] }
# For safe conversions of integers into/from usize
usize_cast = "1.1.0"
# TODO: Don't depend on this.
either = "1.6"
# For loading native libraries at runtime
libloading = "0.7.3"
indexmap = "1.8.0"
# For formatting integers, since we need to support different radii
radix_fmt = "1.0.0"
# For getting information about the system, which is needed for properties
# and platform detection.
# We disable the default features which includes multithreading from rayon for some reason?
sysinfo = { version = "0.27.7", default-features = false }
# For getting basic user information
whoami = "1.2.1"
# For getting directory information
dirs = "4.0.0"
page_size = "0.5.0"
